--- a/PetHomeAngular/src/app/auth/register/register.component.html
+++ b/PetHomeAngular/src/app/auth/register/register.component.html
@@ -1,6 +1,7 @@
 <div class="center-wrapper">
   <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <p class="title">¡Crea tu cuenta en PetHome!</p>
+    <p class="obligatorios">* Campos obligatorios</p>
 
     <mat-button-toggle-group formControlName="tipoUsuario" appearance="legacy" class="user-toggle">
       <mat-button-toggle value="cliente">Cliente</mat-button-toggle>
@@ -14,39 +15,53 @@
     <div class="flex">
       <div class="form-group">
         <label for="nombre">Nombre</label>
-        <input id="nombre" required formControlName="nombre" type="text" class="input" />
+        <input id="nombre" formControlName="nombre" type="text" class="input" />
+        <div class="error" *ngIf="isInvalid('nombre')">Este campo es obligatorio</div>
       </div>
 
       <div class="form-group">
         <label for="telefono">Teléfono</label>
-        <input id="telefono" required formControlName="telefono" type="text" class="input" />
+        <input id="telefono" formControlName="telefono" type="text" class="input" />
+        <div class="error" *ngIf="isInvalid('telefono')">Este campo es obligatorio</div>
       </div>
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
-      <input id="email" required formControlName="email" type="email" class="input" />
+      <input id="email" formControlName="email" type="email" class="input" />
+      <div class="error" *ngIf="isInvalid('email')">
+        <ng-container *ngIf="registerForm.get('email')?.errors?.['required']">
+          Este campo es obligatorio
+        </ng-container>
+        <ng-container *ngIf="registerForm.get('email')?.errors?.['email']">
+          El formato del email no es válido
+        </ng-container>
+      </div>
     </div>
 
     <div class="form-group">
       <label for="contrasena">Contraseña</label>
-      <input id="contrasena" required formControlName="contrasena" type="password" class="input" />
+      <input id="contrasena" formControlName="contrasena" type="password" class="input" />
+      <div class="error" *ngIf="isInvalid('contrasena')">Este campo es obligatorio</div>
     </div>
 
     @if (registerForm.get('tipoUsuario')?.value === 'protectora') {
       <div class="form-group">
         <label for="direccion">Dirección</label>
-        <input id="direccion" required formControlName="direccion" type="text" class="input" />
+        <input id="direccion" formControlName="direccion" type="text" class="input" />
+        <div class="error" *ngIf="isInvalid('direccion')">Este campo es obligatorio</div>
       </div>
 
       <div class="form-group">
         <label for="provincia">Localidad</label>
-        <input id="provincia" required formControlName="provincia" type="text" class="input" />
+        <input id="provincia" formControlName="provincia" type="text" class="input" />
+        <div class="error" *ngIf="isInvalid('provincia')">Este campo es obligatorio</div>
       </div>
 
       <div class="form-group">
         <label for="descripcion">Descripción</label>
-        <input id="descripcion" required formControlName="descripcion" type="text" class="input" />
+        <input id="descripcion" formControlName="descripcion" type="text" class="input" />
+        <div class="error" *ngIf="isInvalid('descripcion')">Este campo es obligatorio</div>
       </div>
     }
 
