--- a/PetHomeAngular/src/app/foot/foot.component.html
+++ b/PetHomeAngular/src/app/foot/foot.component.html
@@ -6,7 +6,7 @@
                 <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
                     style="width: 150px; height: 150px;">
                     <img src="https://mdbootstrap.com/img/Photos/new-templates/animal-shelter/logo.png" height="70"
-                        alt="" loading="lazy" />
+                        alt="Foto Mascotas" />
                 </div>
 
                 <p class="text-center">Adopta una mascota, cambia una vida</p>
@@ -48,7 +48,8 @@
                         <a href="/aviso-legal" class="text-dark"><i class="fas fa-paw pe-3"></i>Aviso Legal</a>
                     </li>
                     <li class="mb-2">
-                        <a href="/politica-privacidad" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de Privacidad</a>
+                        <a href="/politica-privacidad" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de
+                            Privacidad</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +71,14 @@
             </div>
         </div>
     </div>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2025 PetHome. Todos los derechos reservados.
-    </div>
+    <p class="text-center p-3 mb-0">
+        Esta obra está bajo una licencia
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener noreferrer">
+            Creative Commons Atribución/Reconocimiento-CompartirIgual 4.0 Internacional
+        </a>.
+        <img src="/assets/img/CC_BY-SA_icon.png" alt="Licencia Creative Commons BY-SA 4.0"
+        width="80">
+    </p>
+    
+
 </footer>
